Optimize & fix: sw, js, manifest, etc.
Changes: src/ & lib/ folders; bundle file all.min.js; deferred css (onloadCSS); sw offline works now + offline indicator; manifest updated; optimized for minimizing layout shift; CONTRIBUTING.md

--- a/main.css
+++ b/main.css
@@ -558,6 +558,6 @@ input[type="range"] {
 }
 
 @keyframes screenExitDown {
-	from { height: 100vh; }
-	to { height: 0; }
+	from { transform: none; }
+	to { transform: translateY(100vh); }
 }
